IE: Third attempt at fixing overflowing text. Turns out in the 'DOM explorer' you can edit the css components directly to test the formatting.

--- a/css/index.css
+++ b/css/index.css
@@ -101,7 +101,7 @@ nav li:nth-child(1) { font-weight: 600; }
 }
 
 
-#index-content .section-rightpanel {
+#index-content .section-rightpanel div p {
 	max-width: 850px;
 }
 
